@@ -77,6 +77,8 @@ The following \fIoutputformats\fR are supported:
 - \fBtext\fP plain text
 .br
 - \fBspruce\fP Spruce address book
+.br
+- \fBwl\fP Wanderlust address book
 .TP
 \fB\-\-add-email\fP
 Read an e-mail message from stdin and add the sender to the addressbook.
