@@ -5,6 +5,7 @@
  - palmcsv import filter (Marc Tardif)
  - use better common code for csv filters (Marc Tardif)
  - translation HOWTO
+ - wanderlust export filter (Josef Schugt)
 
 0.5.4
  - add show_cursor config option (idea from Cheryl Homiak)
